@@ -20,4 +20,14 @@ class TestNephosServerGenerator < Test::Unit::TestCase
     `rm -f app/test.rb`
   end
 
+  def test_generator_route
+    s1 = File.read("routes.rb")
+    `./bin/nephos-generator --debug r get test ctr#mth`
+    s2 = File.read("routes.rb")
+    `./bin/nephos-generator --debug r get test ctr#mth --rm`
+    s3 = File.read("routes.rb")
+    assert_equal s1, s3
+    assert_not_equal s1, s2
+  end
+
 end
