@@ -1,6 +1,8 @@
 v0.4.2
 	* add version to code
 	* fix a file permissions
+	* add generator route --rm
+	* add test for generator (routes and route --rm)
 
 v0.4.1
 	* fix regression for binary with --debug feature
